header fix on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2147,10 +2147,9 @@ body>article {
 /*  animation-duration: 10s;
   animation-timing-function: steps(25, end);
   animation-iteration-count: infinite; */
-/*  padding-left: 10px;
-  padding-right: 10px; */
+  padding-left: 10px;
+  padding-right: 10px; 
   box-sizing: border-box;
-  text-align: left;
   width:100%;
 }
 
